sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:17: error: 'while' expected but '}' found.
} 
^